--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 # theme: jekyll-theme-slate
-baseurl: "/WinterSolace" # the subpath of your site, e.g. /blog
-title: "Winter Solace"
+baseurl: "/Wintercast" # the subpath of your site, e.g. /blog
+title: "Wintercast"
